# dadaia-pi-workspace

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  RELEASE_NOTES.md  package-lock.json  package.json  pyproject.toml  tsconfig.build.json  tsconfig.json
docs/: governance-v1-freeze.md  governance-v1-operator-guide.md
extensions/: dadaia-pi.ts
prompts/: dadaia-close-release.md  dadaia-define-release.md  dadaia-implement-task.md  dadaia-review.md  dadaia-status.md
scripts/: clean.mjs  governance-v1-smoke.mjs  lint.mjs
skills/dadaia-closure/: SKILL.md
skills/dadaia-doctor/: SKILL.md
skills/dadaia-handoff-emitter/: SKILL.md
skills/dadaia-review/: SKILL.md
specs/: constitution.md
src/: AUTHORITY.md  index.ts
tests/: context.test.ts  extension-commands.test.ts  foundation.test.ts  gate.test.ts  handoff-cli.test.ts  handoff.test.ts  hooks.test.ts  memory-cli.test.ts  panel.test.ts  pi-package.test.ts  session-binding.test.ts  specs-doctor.test.ts  status.test.ts  workflows.test.ts  workspace-scaffold.test.ts
tests_py/: test_authority_doctor.py  test_bin_shim.py  test_bridge.py  test_cli_foundation.py  test_evidence_readiness_backlog.py  test_gate_hooks.py  test_handoff_commands.py  test_mutating_scaffold_context.py  test_panel_backend.py  test_patch_apply.py  test_pi_rpc_workflows.py  test_python_doctor_rich.py  test_read_only_parity.py  test_release_candidates.py  test_workflow_governance.py
workflows/: _workflow_common.py  architecture_review.py  backlog_definition.py  pi_sdk_step.mjs  push_gate.py  release_definition.py  release_implementation.py
(+201 files in other folders)
