[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dadaia-pi-workspace"
version = "0.2.0"
description = "Python-first Pi-native SDD workspace manager for Spec Context Projects."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "dadaia-pi-workspace contributors" }
]
keywords = ["pi", "sdd", "workspace", "spec-driven-development"]
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8"]

[project.scripts]
dadaia-pi = "dadaia_pi.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["dadaia_pi*"]

[tool.pytest.ini_options]
testpaths = ["tests_py"]
pythonpath = ["src"]
